# api-testing

./: presentation.md  with-sources.md
sum-api/: hoppscotch-export.json  pyproject.toml
sum-api/bruno/: Square 4.bru  Square 50.bru  Sum 4 and 12 as a horse.bru  Sum 4 and 12.bru  bruno.json
sum-api/insomnia-export.1710686763118/: wrk_scratchpad.json
sum-api/sum-api/: main.py
